--- a/index.html
+++ b/index.html
@@ -25,5 +25,7 @@
     <button id="flip-button">FLIP</button>
     <button id="start-button">START</button>
 
+    <script src="app.js"></script>
+
 </body>
 </html>
