--- a/public/index.html
+++ b/public/index.html
@@ -4,44 +4,14 @@
     <meta charset="utf-8">
     <title>Battle Ships</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="app.js" charset="utf-8"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
 
     <button id="singlePlayerButton">Single Player</button>
     <button id="multiplayerButton">Multiplayer</button>
-
-    <div class="player p1">
-      Player 1
-      <div class="connected">Connected <span></span></div>
-      <div class="ready">Ready <span></span></div>
-    </div>
-    <div class="player p2">
-      Player 2
-      <div class="connected">Connected <span></span></div>
-      <div class="ready">Ready <span></span></div>
-    </div>
-
-    <div class="container">
-        <div class="grid grid-user"></div>
-        <div class="grid grid-computer"></div>
-    </div>
-
-    <div class="hidden-info">
-      <button id="start">Start Game</button>
-      <button id="rotate">Rotate Your Ships</button>
-      <h3 id="whose-go">Your Go</h3>
-      <h3 id="info"></h3>
-    </div>
-
-    <div class="grid-display">
-      <div class="ship destroyer-container" draggable="true"><div id="destroyer-0"></div><div id="destroyer-1"></div></div>
-      <div class="ship submarine-container" draggable="true"><div id="submarine-0"></div><div id="submarine-1"></div><div id="submarine-2"></div></div>
-      <div class="ship cruiser-container" draggable="true"><div id="cruiser-0"></div><div id="cruiser-1"></div><div id="cruiser-2"></div></div>
-      <div class="ship battleship-container" draggable="true"><div id="battleship-0"></div><div id="battleship-1"></div><div id="battleship-2"></div><div id="battleship-3"></div></div>
-      <div class="ship carrier-container" draggable="true"><div id="carrier-0"></div><div id="carrier-1"></div><div id="carrier-2"></div><div id="carrier-3"></div><div id="carrier-4"></div></div>
-    </div>
 
   </body>
 </html> 
