--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   </head>
   <body>
-
-    <button id="singlePlayerButton">Single Player</button>
-    <button id="multiplayerButton">Multiplayer</button>
-
+    <div class="splash-container">
+      <h1 class="splash-title">Battleships</h1>
+      <a href="/singlePlayer.html">Single Player</a>
+      <a href="/multiplayer.html">Multiplayer</a>
+    </div>
+    
+    <img src="./images/battleship-large.svg" class="splash-battleship-image">
   </body>
 </html> 
     
