48. Style home page.

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,11 @@
   <body>
     <div class="splash-container">
       <h1 class="splash-title">Battleships</h1>
-      <a href="/singlePlayer.html" class="btn">Single Player</a>
-      <a href="/multiplayer.html" class="btn">Multiplayer</a>
+      <div>
+        <a href="/singlePlayer.html" class="btn splash-btn">Single Player</a>
+        <a href="/multiplayer.html" class="btn splash-btn">Multiplayer</a>
+      </div>
+      
     </div>
     
     <img src="./images/battleship-large.svg" class="splash-battleship-image">
