--- a/public/singlePlayer.html
+++ b/public/singlePlayer.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="container hidden-info">
-      <div class="setup-buttons">
+      <div class="setup-buttons" id="setup-buttons">
         <button id="start" class="btn">Start Game</button> 
         <button id="rotate" class="btn">Rotate Your Ships</button>
       </div>
